fixed mobile menu nesting and mobile project layout issues

--- a/css/index.scss
+++ b/css/index.scss
@@ -427,13 +427,13 @@ main {
   }
   &__title {
     position: relative;
-    width: 280px;
+    width: 300px;
     left: 20px;
     top: 65px;
     @media screen and (min-width: 768px) {
       left: 15%;
       top: -58px;
-      width: 550px;
+      width: 600px;
       position: absolute;
       z-index: 2;
     }
@@ -446,7 +446,7 @@ main {
     &:before {
       background-color: $turquoise2;
       content: '';
-      width: 50%;
+      width: 100%;
       display: block;
       position: absolute;
       z-index: -1;
@@ -851,24 +851,29 @@ Single project styles
     }
   }
   &__content {
-    margin-top: 140px;
+    margin-top: 60px;
     @media screen and (min-width: 768px) {
       margin-top: 100px;
     }
     > {
       h3, h4, p {
         margin-left: 15%;
-
+        margin-right: 20px;
         margin-top: 20px;
         @media screen and (min-width: 768px) {
           margin-top: 24px;
+          margin-right: 0px;
           width: 475px;
         }
         @media screen and (min-width: 1024px) {
           width: 575px;
+          margin-right: 0px;
+
         }
         @media screen and (min-width: 1440px) {
           width: 675px;
+          margin-right: 0px;
+
         }
       }
       p {
@@ -929,7 +934,7 @@ Single project styles
           line-height: 18px;
           font-family: 'Eczar', serif;
           padding: 20px;
-          width: 215px;
+          width: 320px;
           @media screen and (min-width: 768px) {
             font-size: 16px;
             line-height: 24px;
@@ -1010,12 +1015,10 @@ Single project styles
   }
 
   &__domains {
-    font-family: 'Eczar', serif;
-    width: 230px;
-    background-color: rgba($turquoise3, .25);
-    margin-top: 90px;
-    padding: 20px;
+      display: none;
+
     @media screen and (min-width: 768px) {
+      display: block;
       padding: 30px 20px;
       position: absolute;
       margin-top: 0;
